email otp expiry time validation and swagger correction
